# Library-TwitchIRCSDK

./: CMakeLists.txt  README.md
include/: clientIRC.h  event.h  message.h  twitchirc.h  user.h
src/: clientIRC.cpp  event.cpp  message.cpp  twitchirc.cpp  user.cpp
